--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 /.vs/Eventos.IO/v15/Server/sqlite3/db.lock
 /.vs/*
 /src/Eventos.IO.Domain/obj/*
-/src/Eventos.IO.Domain/Debug/*
+/src/Eventos.IO.Domain/bin/Debug/*
 /src/Eventos.IO.Domain.Core/obj/*
-/src/Eventos.IO.Domain.Core/Debug/*
+/src/Eventos.IO.Domain.Core/bin/Debug/*
