--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Eventos.IO.Domain.Core/bin/Debug/*
 /src/Eventos.IO.Domain/obj/Debug/netstandard2.0
 /src/Eventos.IO.Domain/obj/Debug/netcoreapp2.0
+/src/Eventos.IO.Domain/bin/Debug/netcoreapp2.0
+/src/Eventos.IO.Domain/bin/Debug/netstandard2.0
