--- a/src/Eventos.IO.Domain/Eventos.IO.Domain.csproj
+++ b/src/Eventos.IO.Domain/Eventos.IO.Domain.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Eventos.IO.Domain.Core\Eventos.IO.Domain.Core.csproj" />
+  <ItemGroup>    
+    <ProjectReference Include="..\Eventos.IO.Domain.Core\Eventos.IO.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
